--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .parallax {
-    /* background-image: url("img/crypto-001-920x398.jpg"); */
-    min-height: 500px;
+    background-image: url("img/crypto-001-920x398.jpg");
     background-color: blanchedalmond;
 
     /* Create the parallax scrolling effect */
@@ -8,43 +7,32 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
+    min-height: 100vh;
 }
-/* .parallax::before {
-  content: "";
-  position: absolute;
-  inset: 0; 
-  background-color: rgba(20, 18, 18, 0.15);
-} */
-
 
 h1 {
-    margin-bottom: 3%;
+    margin-bottom: 2%;
     margin-left: 1%;
 }
-.container{
+
+.container {
     display: flex;
-    /* border: solid black 1px; */
-    /* justify-content: center; */
     flex-wrap: wrap;
     padding-left: 0;
     padding-right: 0;
     margin-top: 5%;
-    /* align-content: space-around; */
-    /* column-gap: 0.5em;
-    row-gap: 0.5em; */
-    /* margin-left: 20%; */
-    /* margin-right: 10%; */
 }
-#search-input{
-    max-width: 180px;
-    min-width: 140px;
+
+#search-input {
+    max-width: 240px;
+    min-width: 120px;
 }
+
 .box {
     border-radius: 15px;
-    /* border: 1px black dashed; */
     padding: 0px;
 }
+
 .tab-pane:not(.active) {
     display: none !important;
 }
@@ -53,14 +41,13 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: left;
-    /* margin-left: 15%;
-    margin-right: 15%; ERASE*/
 
 }
-.row{
+
+.row {
     margin-left: 0px;
-    /* border: blue 1px solid; */
 }
+
 .collapse-overlay {
     position: absolute;
     top: 40px;
@@ -69,9 +56,10 @@ h1 {
     z-index: 10;
     background: white;
     border: 1px solid #ddd;
-    box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
 }
+
 .close-collapse-btn {
     position: absolute;
     top: 8px;
@@ -95,9 +83,22 @@ h1 {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background: rgba(255,255,255,0.5);
+    background: rgba(255, 255, 255, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 9999;
+}
+
+#live-reports-container {
+    margin-top: 5%;
+    background-color: rgba(250, 225, 225, 0.9);
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+#live-reports-chart {
+    width: 100% !important;
+    height: auto !important;
+    max-height: 70vh;
 }
